# avsearch

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
avsearch/: __init__.py
avsearch/src/: avsearch.py  cli.py  errors.py  schemas.py  utils.py
examples/: basic-index.html  categories.json.example  index.html  pattern-replace.json.example  settings.json.example
examples/avsearch/: package-lock.json  package.json
examples/avsearch-vanilla-preview-panel/: .gitignore  app.tsx  index.html  package-lock.json  package.json  style.css
examples/avsearch-vanilla-preview-panel/src/: app.tsx
examples/avsearch-vanilla-preview-panel/styles/: style.css
examples/avsearch/components/: autocomplete.js
examples/avsearch/pages/: _app.tsx  index.tsx
examples/avsearch/styles/: globals.css
examples/preview-autocomplete/: LICENSE  README.md  index.html  package-lock.json  package.json
examples/preview-autocomplete/src/: app.tsx  createLoadVideoPlugin.ts
examples/preview-autocomplete/styles/: style.css
examples/preview-autocomplete/util/: number.extensions.ts
myconfig/: categories.json  patterns.json
scripts/: build.sh  pre-commit.sh
